dataset1235/2025-2/610742602/users/2070606917/executions/906907063_291286518.log
== SUBMISSION (2025-08-19 21:52:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:47:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = (int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = (int(input("Digite o numero:"))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = (int(input("Digite o numero:"))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = (int(input("Digite o numero:"))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = (int(input("Digite o numero:"))
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = (int(input("Digite o numero:"))
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:47:40)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:23)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
      
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:52:43)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 2)
    
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:52:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 2)
    
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:08)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num *3)
    
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num *3)
    
      
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:48:21)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(8)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:8
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:8
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:8
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:8
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:52:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:50:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(int(2)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 8
    print(int(2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 8
    print(int(2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 8
    print(int(2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 8
    print(int(2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 8
    print(int(2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:52:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:49:21)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(int)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:<class 'int'>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:<class 'int'>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:<class 'int'>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:<class 'int'>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:<class 'int'>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:50:22)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(int2)
      
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int2)
          ^^^^
NameError: name 'int2' is not defined. Did you mean: 'int'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int2)
          ^^^^
NameError: name 'int2' is not defined. Did you mean: 'int'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int2)
          ^^^^
NameError: name 'int2' is not defined. Did you mean: 'int'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int2)
          ^^^^
NameError: name 'int2' is not defined. Did you mean: 'int'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(int2)
          ^^^^
NameError: name 'int2' is not defined. Did you mean: 'int'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:52:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(num * 3)
    
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:768
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:3702
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:17034
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:1332
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:48:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))
      

# Impressao do dobro do numero
print(8)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:8
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:8
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:8
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:8
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
